--- a/src/Components/page/tasks/main.module.css
+++ b/src/Components/page/tasks/main.module.css
@@ -8,11 +8,11 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .body {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   position: relative;
   overflow: auto;
 }
